--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="style.css" />
-    <title>My Personal Website</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Victor Mochoge Personal Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-  <body>
-    <h1>Hello World!</h1>
+<body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">Victor Mochoge</div>
+            <div class="menu-toggle">☰</div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="home" class="hero">
+        <h1>Welcome to <span id="typing-text"></span></h1>
+        <p>Creative. Dynamic. You.</p>
+        <button class="cta-button">Explore</button>
+    </section>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Your IT software and hardware Expert.</p>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
