--- a/index.html
+++ b/index.html
@@ -3,31 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victor Mochoge Personal Website</title>
+    <title>Your Name - Personal Site</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">Victor Mochoge</div>
+            <div class="logo">YourName</div>
             <div class="menu-toggle">☰</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><button id="theme-toggle">Toggle Theme</button></li>
             </ul>
         </nav>
+        <div class="progress-bar" id="scroll-progress"></div>
     </header>
     <section id="home" class="hero">
         <h1>Welcome to <span id="typing-text"></span></h1>
         <p>Creative. Dynamic. You.</p>
         <button class="cta-button">Explore</button>
     </section>
-    <section id="about">
+    <section id="about" class="about-section">
         <h2>About Me</h2>
-        <p>Your IT software and hardware Expert.</p>
+        <p>Some cool stuff about you goes here.</p>
     </section>
+    <section id="work" class="work-section">
+        <h2>My Work</h2>
+        <div class="work-grid">
+            <div class="work-card" data-info="Built with HTML & CSS">
+                <h3>Project 1</h3>
+                <p>A brief description of your first project.</p>
+            </div>
+            <div class="work-card" data-info="React & Node.js">
+                <h3>Project 2</h3>
+                <p>Details about your second awesome project.</p>
+            </div>
+            <div class="work-card" data-info="Python & Django">
+                <h3>Project 3</h3>
+                <p>What makes this project stand out.</p>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="contact-section">
+        <h2>Contact Me</h2>
+        <button id="open-contact-form">Get in Touch</button>
+    </section>
+    <div class="modal" id="contact-modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <h3>Send a Message</h3>
+            <form id="contact-form">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
