--- a/index.html
+++ b/index.html
@@ -3,66 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Site</title>
+    <title>Your Name - Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="particles"></div>
+    <!-- Navbar -->
     <header>
         <nav class="navbar">
             <div class="logo">YourName</div>
             <div class="menu-toggle">☰</div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><button id="theme-toggle">Toggle Theme</button></li>
             </ul>
         </nav>
         <div class="progress-bar" id="scroll-progress"></div>
     </header>
-    <section id="home" class="hero">
+    <!-- Home Content -->
+    <section id="home">
         <h1>Welcome to <span id="typing-text"></span></h1>
         <p>Creative. Dynamic. You.</p>
         <button class="cta-button">Explore</button>
     </section>
-    <section id="about" class="about-section">
-        <h2>About Me</h2>
-        <p>Some cool stuff about you goes here.</p>
-    </section>
-    <section id="work" class="work-section">
-        <h2>My Work</h2>
-        <div class="work-grid">
-            <div class="work-card" data-info="Built with HTML & CSS">
-                <h3>Project 1</h3>
-                <p>A brief description of your first project.</p>
-            </div>
-            <div class="work-card" data-info="React & Node.js">
-                <h3>Project 2</h3>
-                <p>Details about your second awesome project.</p>
-            </div>
-            <div class="work-card" data-info="Python & Django">
-                <h3>Project 3</h3>
-                <p>What makes this project stand out.</p>
-            </div>
-        </div>
-    </section>
-    <section id="contact" class="contact-section">
-        <h2>Contact Me</h2>
-        <button id="open-contact-form">Get in Touch</button>
-    </section>
-    <div class="modal" id="contact-modal">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <h3>Send a Message</h3>
-            <form id="contact-form">
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-    </div>
     <script src="script.js"></script>
+    <script>
+        // Typing Effect
+        const phrases = ["My World", "Your Journey", "The Future"];
+        let phraseIndex = 0;
+        let charIndex = 0;
+        const typingText = document.getElementById('typing-text');
+        let isDeleting = false;
+
+        function type() {
+            const currentPhrase = phrases[phraseIndex];
+            if (!isDeleting && charIndex <= currentPhrase.length) {
+                typingText.textContent = currentPhrase.substring(0, charIndex);
+                charIndex++;
+                setTimeout(type, 100);
+            } else if (isDeleting && charIndex >= 0) {
+                typingText.textContent = currentPhrase.substring(0, charIndex);
+                charIndex--;
+                setTimeout(type, 50);
+            } else if (!isDeleting && charIndex > currentPhrase.length) {
+                isDeleting = true;
+                setTimeout(type, 1000);
+            } else if (isDeleting && charIndex < 0) {
+                isDeleting = false;
+                phraseIndex = (phraseIndex + 1) % phrases.length;
+                setTimeout(type, 200);
+            }
+        }
+        type();
+    </script>
 </body>
 </html>
