changes to personal website

--- a/about.html
+++ b/about.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - About</title>
+    <title>About - My Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="particles"></div>
-    <!-- Navbar -->
     <header>
-        <nav class="navbar">
-            <div class="logo">YourName</div>
-            <div class="menu-toggle">☰</div>
+        <nav>
+            <div class="logo">My Site</div>
+            <div class="nav-toggle">☰</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><button id="theme-toggle">Toggle Theme</button></li>
             </ul>
         </nav>
-        <div class="progress-bar" id="scroll-progress"></div>
     </header>
-    <!-- About Content -->
-    <section id="about" class="about-section">
-        <h2>About Me</h2>
-        <p>I’m a creative individual passionate about technology, design, and storytelling. Here’s where you can share your journey, skills, or anything that defines you!</p>
-    </section>
+    <main>
+        <section>
+            <h1>About Me</h1>
+            <p>Hi, I'm [Your Name]! I'm passionate about [your interests]. This is where I share a bit about myself.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 My Name. All rights reserved.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
