--- a/index.html
+++ b/index.html
@@ -3,61 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Home</title>
+    <title>Home - My Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="particles"></div>
-    <!-- Navbar -->
     <header>
-        <nav class="navbar">
-            <div class="logo">YourName</div>
-            <div class="menu-toggle">☰</div>
+        <nav>
+            <div class="logo">My Site</div>
+            <div class="nav-toggle">☰</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><button id="theme-toggle">Toggle Theme</button></li>
             </ul>
         </nav>
-        <div class="progress-bar" id="scroll-progress"></div>
     </header>
-    <!-- Home Content -->
-    <section id="home">
-        <h1>Welcome to <span id="typing-text"></span></h1>
-        <p>Creative. Dynamic. You.</p>
-        <button class="cta-button">Explore</button>
-    </section>
+    <main>
+        <section class="hero">
+            <h1>Welcome to My Website</h1>
+            <p>This is my personal space on the web. Explore to learn more about me!</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 My Name. All rights reserved.</p>
+    </footer>
     <script src="script.js"></script>
-    <script>
-        // Typing Effect
-        const phrases = ["My World", "Your Journey", "The Future"];
-        let phraseIndex = 0;
-        let charIndex = 0;
-        const typingText = document.getElementById('typing-text');
-        let isDeleting = false;
-
-        function type() {
-            const currentPhrase = phrases[phraseIndex];
-            if (!isDeleting && charIndex <= currentPhrase.length) {
-                typingText.textContent = currentPhrase.substring(0, charIndex);
-                charIndex++;
-                setTimeout(type, 100);
-            } else if (isDeleting && charIndex >= 0) {
-                typingText.textContent = currentPhrase.substring(0, charIndex);
-                charIndex--;
-                setTimeout(type, 50);
-            } else if (!isDeleting && charIndex > currentPhrase.length) {
-                isDeleting = true;
-                setTimeout(type, 1000);
-            } else if (isDeleting && charIndex < 0) {
-                isDeleting = false;
-                phraseIndex = (phraseIndex + 1) % phrases.length;
-                setTimeout(type, 200);
-            }
-        }
-        type();
-    </script>
 </body>
 </html>
