changes to website

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">My Site</div>
+            <div class="logo">Victor Mochoge Zhero</div>
             <div class="nav-toggle">☰</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -22,11 +22,20 @@
     <main>
         <section>
             <h1>About Me</h1>
-            <p>Hi, I'm [Your Name]! I'm passionate about [your interests]. This is where I share a bit about myself.</p>
+            <p>
+                👋 Hi, I’m Victor Mochoge a.k.a @Zhero-Six , a Full-Stack Software Engineer. <br/>
+                👀 I’m interested in Software Engineering and chess.<br/>
+                🌱 I’m currently learning new tech and AI trends.<br/>
+                💞️ I’m looking to collaborate on providing software solutions for a range of software problems.<br/>
+                📫 How to reach me email me vmochoge@gmail.com or call +254 719 482 094<br/>
+                😄 Pronouns: Biological Male.<br/>
+                ⚡ Fun fact: Founder : ZheroTronics Software Solutions.<br/>
+            
+            </p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 My Name. All rights reserved.</p>
+        <p>&copy; 2025 Victor Mochoge. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
