--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">My Site</div>
+            <div class="logo">Victor Mochoge Zhero</div>
             <div class="nav-toggle">☰</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -22,12 +22,12 @@
     <main>
         <section>
             <h1>Contact Me</h1>
-            <p>Email: [your-email@example.com]</p>
+            <p>Email: vmochoge@gmail.com</p>
             <p>Feel free to reach out!</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 My Name. All rights reserved.</p>
+        <p>&copy; 2025 Victor Mochoge. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
