--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">My Site</div>
+            <div class="logo">Victor Mochoge Zhero</div>
             <div class="nav-toggle">☰</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -26,7 +26,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 My Name. All rights reserved.</p>
+        <p>&copy; 2025 Victor Mochoge. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
