--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,23 @@
         <section>
             <h1>Contact Me</h1>
             <p>Email: vmochoge@gmail.com</p>
-            <p>Feel free to reach out!</p>
+            <p>Or use the form below to send me a message!</p>
+            <form id="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit">Send Message</button>
+            </form>
+            <div id="form-message"></div>
         </section>
     </main>
     <footer>
