--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <h1>Contact Me</h1>
             <p>Email: vmochoge@gmail.com</p>
             <p>Or use the form below to send me a message!</p>
-            <form id="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+            <form id="contact-form" action="https://formspree.io/f/xzzdlnny" method="POST">
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
@@ -32,6 +32,10 @@
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="subject">Subject:</label>
+                    <input type="text" id="subject" name="subject" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Message:</label>
