--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
     <main>
         <section>
             <h1>Contact Me</h1>
+            <img src="./personal-website/images/contact.jpg" alt="Contact Image" class="page-image">
             <p>Email: vmochoge@gmail.com</p>
             <p>Or use the form below to send me a message!</p>
             <form id="contact-form" action="https://formspree.io/f/xzzdlnny" method="POST">
