--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <main>
         <section class="hero">
             <h1>Welcome to My Website</h1>
+            <img src="./personal-website/images/home.jpg" alt="Home Image" class="page-image">
             <p>This is my personal space on the web. Explore to learn more about me!</p>
         </section>
     </main>
