--- a/work.html
+++ b/work.html
@@ -23,6 +23,7 @@
     <main>
         <section>
             <h1>My Work</h1>
+            <img src="./personal-website/images/work.jpg" alt="Work Image" class="page-image">
             <p>Here’s some of my projects: [List your work or achievements here].</p>
         </section>
     </main>
