--- a/about.html
+++ b/about.html
@@ -23,6 +23,8 @@
     <main>
         <section>
             <h1>About Me</h1>
+            <div class="about-content">
+                <img src="./personal-website/images/about.jpg" alt="About Image" class="page-image">  
             <p>
                 👋 Hi, I’m Victor Mochoge a.k.a @Zhero-Six , a Full-Stack Software Engineer. <br/>
                 👀 I’m interested in Software Engineering and chess.<br/>
@@ -33,6 +35,7 @@
                 ⚡ Fun fact: Founder : ZheroTronics Software Solutions.<br/>
             
             </p>
+        </div>
         </section>
     </main>
     <footer>
