added social links

--- a/about.html
+++ b/about.html
@@ -40,6 +40,26 @@
     </main>
     <footer>
         <p>&copy; 2025 Victor Mochoge. All rights reserved.</p>
+        <div class="social-links">
+            <a href="https://x.com/zhero_mochoge" target="_blank" rel="noopener noreferrer">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/x.svg" alt="X" class="social-icon">
+            </a>
+            <a href="https://facebook.com/profile.php?id=100008475044697" target="_blank" rel="noopener noreferrer">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/facebook.svg" alt="Facebook" class="social-icon">
+            </a>
+            <a href="https://instagram.com/zhero_six" target="_blank" rel="noopener noreferrer">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg" alt="Instagram" class="social-icon">
+            </a>
+            <a href="https://github.com/Zhero-Six" target="_blank" rel="noopener noreferrer">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/github.svg" alt="GitHub" class="social-icon">
+            </a>
+            <a href="https://wa.me/254719482094" target="_blank" rel="noopener noreferrer">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/whatsapp.svg" alt="WhatsApp" class="social-icon">
+            </a>
+            <a href="mailto:vmochoge@gmail.com">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/maildotru.svg" alt="Email" class="social-icon">
+            </a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script> <!-- Particles.js CDN -->
     <script>
