social links spacing

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         </section>
     </main>
     <footer>
-        <div class="social-links">
+        <div class="footer-content">
+            <p>&copy; 2025 Victor Mochoge. All rights reserved.</p>
+            <div class="social-links">
             <a href="https://x.com/zhero_mochoge" target="_blank" rel="noopener noreferrer">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/x.svg" alt="X" class="social-icon">
             </a>
@@ -47,9 +49,8 @@
             <a href="mailto:vmochoge@gmail.com">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/maildotru.svg" alt="Email" class="social-icon">
             </a>
+            </div>
         </div>
-        <p>&copy; 2025 Victor Mochoge. All rights reserved.</p>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script> <!-- Particles.js CDN -->
     <script>
@@ -88,9 +89,9 @@
                 }
             });
         }
-    
         window.addEventListener('scroll', handleScroll);
         window.addEventListener('load', handleScroll); // Trigger on load
+        
     </script>
     <script src="script.js"></script>
 </body>
