--- a/about.html
+++ b/about.html
@@ -39,8 +39,9 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Victor Mochoge. All rights reserved.</p>
-        <div class="social-links">
+        <div class="footer-content">
+            <p>&copy; 2025 Victor Mochoge. All rights reserved.</p>
+            <div class="social-links">
             <a href="https://x.com/zhero_mochoge" target="_blank" rel="noopener noreferrer">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/x.svg" alt="X" class="social-icon">
             </a>
@@ -59,6 +60,7 @@
             <a href="mailto:vmochoge@gmail.com">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/maildotru.svg" alt="Email" class="social-icon">
             </a>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script> <!-- Particles.js CDN -->
@@ -100,7 +102,7 @@
         }
     
         window.addEventListener('scroll', handleScroll);
-        window.addEventListener('load', handleScroll); // Trigger on load
+        window.addEventListener('load', handleScroll); 
     </script>
     <script src="script.js"></script>
 </body>
