changes to work

--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
         <section>
             <h1>My Work</h1>
             <img src="./personal-website/images/work.jpg" alt="Work Image" class="page-image">
-            <p>I have 3 years of supervisory roles in the FMCG sector with integration of warehouse management system <br>I'm also proud 5 years of technical experience in tech training at Twiga Foods limited <br> Currently I'm pursuing a certification in Software Engineering from Moringa School in association with US based Flatiron School </p>
+            <p>I have 3 years of supervisory roles in the FMCG sector with integration of warehouse management system <br>I also pride myself with 2 years of technical experience in tech training at Twiga Foods limited <br> Currently I'm pursuing a certification in Software Engineering from Moringa School in association with US based Flatiron School </p>
         </section>
     </main>
     <footer>
